--- a/index.html
+++ b/index.html
@@ -352,20 +352,18 @@
         </div>
 
         <div class="contact-form">
-          <form action="">
+            <form action="https://formspree.io/f/xaneebbw" method="POST">
             <div class="form-grid">
               <div class="grid-left">
                 <input type="text" required placeholder="Full Name" />
-                <input type="email" required placeholder="Email Address" />
+                <input type="email"  name="email" required placeholder="Email Address" />
                 <input type="text" required placeholder="Subject" />
               </div>
-
               <div class="grid-right">
-                <textarea placeholder="Message"></textarea>
+                <textarea name="message" placeholder="Message"></textarea>
               </div>
             </div>
-
-            <a href="mailto:laetitia.piat09@gmail.com" class="btn-primary">Send message</a>
+            <button type="submit" class="btn-primary">Send message</button>
           </form>
         </div>
       </section>
