--- a/index.html
+++ b/index.html
@@ -125,11 +125,8 @@
                 <h4 class="edu-name">Concepteur - Developpeur d'Application</h4>
                 <p class="company">Wild code school</p>
                 <p class="edu-desc">
-                  Maecenas finibus nec sem ut imperdiet. Ut tincidunt est ac
-                  dolor aliquam sodales. Phasellus sed mauris hendrerit, laoreet
-                  sem in, lobortis ante.
+                 Apprentissage JavaScript avancé, React et Vite.js, Postgresql, graphQL, Docker, Apollo server, Apollo Client, Jest, Vitest, API rest
                 </p>
-
                 <div class="divider"></div>
               </div>
 
@@ -138,11 +135,8 @@
                 <h4 class="edu-name">Developpeur web</h4>
                 <p class="company">Openclassrooms</p>
                 <p class="edu-desc">
-                  Aliquam tincidunt malesuada tortor vitae iaculis. In eu turpis
-                  iaculis, feugiat risus quis, aliquet urna. Quisque fringilla
-                  mollis risus, eu pulvinar dolor.
+                  HTML, CSS, JavaScript, react, MongoDB, API rest
                 </p>
-
                 <div class="divider"></div>
               </div>
             </div>
