--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <h4 class="edu-name">Developpeur web</h4>
                 <p class="company">Openclassrooms</p>
                 <p class="edu-desc">
-                  HTML, CSS, JavaScript, react, MongoDB, API rest
+                  HTML, CSS, JavaScript, react, MongoDB, API rest, Git, Github
                 </p>
                 <div class="divider"></div>
               </div>
