--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
 
   <body>
@@ -125,7 +128,9 @@
                 <h4 class="edu-name">Concepteur - Developpeur d'Application</h4>
                 <p class="company">Wild code school</p>
                 <p class="edu-desc">
-                 Apprentissage JavaScript avancé, React et Vite.js, Postgresql, graphQL, Docker, Apollo server, Apollo Client, Jest, Vitest, API rest
+                  Apprentissage JavaScript avancé, React et Vite.js, Postgresql,
+                  graphQL, Docker, Apollo server, Apollo Client, Jest, Vitest,
+                  API rest
                 </p>
                 <div class="divider"></div>
               </div>
@@ -266,23 +271,22 @@
         </ul>
 
         <div class="portfolio-items-group">
-
           <div class="portfolio-item active">
             <img src="./assets/images/kasa.png" alt="" class="item-img" />
             <h4 class="item-name">Kasa</h4>
             <div class="item-icon">
-              <i class="fa-brands fa-react " style="color: #61DAFB;"></i>
-              <i class="fa-brands fa-css3-alt" style="color: #1572B6;"></i>
+              <i class="fa-brands fa-react" style="color: #61dafb"></i>
+              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
             </div>
-              <div class="item-category">React</div>
+            <div class="item-category">React</div>
           </div>
 
           <div class="portfolio-item active">
             <img src="./assets/images/ohMyFood.png" alt="" class="item-img" />
             <h4 class="item-name">Oh My Food</h4>
             <div class="item-icon">
-              <i class="fa-brands fa-html5 " style="color: #E34F26;"></i>
-              <i class="fa-brands fa-css3-alt" style="color: #1572B6;"></i>
+              <i class="fa-brands fa-html5" style="color: #e34f26"></i>
+              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
             </div>
             <div class="item-category">HTML</div>
           </div>
@@ -291,20 +295,29 @@
             <img src="./assets/images/Galerie.png" alt="" class="item-img" />
             <h4 class="item-name">Galerie d'art Céline Reguin</h4>
             <div class="item-icon">
-              <i class="fa-brands fa-wordpress" style="color: #21759B;"></i>
-              <i class="fa-brands fa-css3-alt" style="color: #1572B6;"></i>
+              <i class="fa-brands fa-wordpress" style="color: #21759b"></i>
+              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
             </div>
             <div class="item-category">WordPress</div>
           </div>
 
           <div class="portfolio-item active">
-            <img src="./assets/images/TheGoodCorner.png" alt="" class="item-img" />
+            <img
+              src="./assets/images/TheGoodCorner.png"
+              alt=""
+              class="item-img"
+            />
             <h4 class="item-name">The Good Corner</h4>
             <div class="item-icon">
-              <i class="fa-brands fa-react " style="color: #61DAFB;"></i>
-              <i class="fa-brands fa-css3-alt" style="color: #1572B6;"></i>
-              <i class="fa-brands fa-docker" style="color: #2496ED;"></i>
-              <img class="img-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vitejs/vitejs-original.svg" alt="Vite.js" width="5">
+              <i class="fa-brands fa-react" style="color: #61dafb"></i>
+              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+              <i class="fa-brands fa-docker" style="color: #2496ed"></i>
+              <img
+                class="img-icon"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vitejs/vitejs-original.svg"
+                alt="Vite.js"
+                width="5"
+              />
             </div>
             <div class="item-category">React</div>
           </div>
@@ -318,9 +331,8 @@
               <i class="fa-brands fa-docker" style="color: #2496ED;"></i>
               <img class="img-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg" alt="Tailwind CSS" width='5'>
             </div>
-            <div class="item-category">React</div>
-          </div> -->
-
+            <div class="item-category">React</div>-->
+        </div>
       </section>
 
       <!-- contact section structure -->
@@ -346,11 +358,16 @@
         </div>
 
         <div class="contact-form">
-            <form action="https://formspree.io/f/xaneebbw" method="POST">
+          <form action="https://formspree.io/f/xaneebbw" method="POST">
             <div class="form-grid">
               <div class="grid-left">
                 <input type="text" required placeholder="Full Name" />
-                <input type="email"  name="email" required placeholder="Email Address" />
+                <input
+                  type="email"
+                  name="email"
+                  required
+                  placeholder="Email Address"
+                />
                 <input type="text" required placeholder="Subject" />
               </div>
               <div class="grid-right">
