lien import icon

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
           <div class="hero-content">
             <div class="hero-content-wrapper">
-              <p class="title">Développeuse</p>
+              <p class="title">Développeuse / Conceptrice d'applications</p>
               <h1 class="name">LAETITIA</h1>
               <div class="desc">
                 <p>
@@ -382,5 +382,15 @@
 
     <!-- Custom JS Link -->
     <script src="./assets/script.js"></script>
+
+    <!-- ionicon CDN -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
