--- a/index.html
+++ b/index.html
@@ -273,6 +273,33 @@
         <div class="portfolio-items-group">
           <div class="portfolio-item active">
             <img src="./assets/images/kasa.png" alt="" class="item-img" />
+            <h4 class="item-name">Media Projct 2</h4>
+            <div class="item-icon">
+              <ion-icon name="film"></ion-icon>
+            </div>
+            <div class="item-category">Media</div>
+          </div>
+
+          <div class="portfolio-item active">
+            <img src="./assets/images/Kasa.png" alt="" class="item-img" />
+            <h4 class="item-name">Mockup Design 1</h4>
+            <div class="item-icon">
+              <ion-icon name="image"></ion-icon>
+            </div>
+            <div class="item-category">Mockups</div>
+          </div>
+
+          <div class="portfolio-item active">
+            <img src="./assets/images/Kasa.png" alt="" class="item-img" />
+            <h4 class="item-name">YouTube Video 1</h4>
+            <div class="item-icon">
+              <ion-icon name="videocam"></ion-icon>
+            </div>
+            <div class="item-category">YouTube Videos</div>
+          </div>
+
+          <div class="portfolio-item active">
+            <img src="./assets/images/kasa.png" alt="" class="item-img" />
             <h4 class="item-name">Kasa</h4>
             <div class="item-icon">
               <i class="fa-brands fa-react" style="color: #61dafb"></i>
