--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           </div>
 
           <div class="portfolio-item active">
-            <img src="./assets/images/kasa.png" alt="" class="item-img" />
+            <img src="./assets/images/Kasa.png" alt="" class="item-img" />
             <h4 class="item-name">Kasa</h4>
             <div class="item-icon">
               <i class="fa-brands fa-react" style="color: #61dafb"></i>
@@ -309,7 +309,7 @@
           </div>
 
           <div class="portfolio-item active">
-            <img src="./assets/images/ohMyFood.png" alt="" class="item-img" />
+            <img src="./assets/images/OhMyFood.png" alt="" class="item-img" />
             <h4 class="item-name">Oh My Food</h4>
             <div class="item-icon">
               <i class="fa-brands fa-html5" style="color: #e34f26"></i>
