--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
                   m’adapte rapidement dans tout nouvel univers et également à
                   tout nouvel outils.
                 </p>
+                <br />
+                <p>
+                  Actuellement en apprentissage pour un titre de Concepteur
+                  Developpeur d'applications de niveau Bac + 3/4 et très
+                  épanouie dans mon quotidien professionnel, je souhaite
+                  continuer dans ce parcours et intégrer une formation niveau
+                  Bac+5 en alternance également.
+                </p>
               </div>
 
               <a
@@ -156,9 +164,9 @@
                 <h4 class="exp-name">Développeuse web</h4>
                 <p class="company">Klocel</p>
                 <p class="exp-desc">
-                  Praesent dignissim sollicitudin justo, sed elementum quam
-                  lacinia quis. Phasellus eleifend tristique posuere. Sed vitae
-                  dui nec magna.
+                  Amélioration du logiciel Cella (logistique), création de
+                  nouvelles fonctionnalités, correction de bug, création de
+                  template en reportBro
                 </p>
 
                 <div class="divider"></div>
@@ -166,12 +174,10 @@
 
               <div class="grid-item">
                 <h4 class="year">2023 - 2024</h4>
-                <h4 class="exp-name">Aide soignante</h4>
+                <h4 class="exp-name">Aide soignante remplaçante</h4>
                 <p class="company">AIRBP</p>
                 <p class="exp-desc">
-                  Maecenas tempus faucibus rutrum. Duis eu aliquam urna. Proin
-                  vitae nulla tristique, ornare felis id, congue libero. Nam
-                  volutpat euismod quam.
+                  Aide aux soins lors du process de dialyse
                 </p>
 
                 <div class="divider"></div>
@@ -182,9 +188,8 @@
                 <h4 class="exp-name">Technicienne support Logiciel</h4>
                 <p class="company">EBP</p>
                 <p class="exp-desc">
-                  Duis mollis nunc quis quam viverra venenatis. Nulla nulla
-                  arcu, congue vitae nunc ac, sodales ultricies diam. Nullam
-                  justo leo, tincidunt sit amet.
+                  Aide à l'utilisation des logiciels EBP pour les clients.
+                  Hotline et mails
                 </p>
 
                 <div class="divider"></div>
@@ -275,6 +280,7 @@
             <img src="./assets/images/Kasa.png" alt="" class="item-img" />
             <h4 class="item-name">Kasa</h4>
             <div class="item-icon">
+              <i class="fa-brands fa-html5" style="color: #e34f26"></i>
               <i class="fa-brands fa-react" style="color: #61dafb"></i>
               <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
             </div>
