modif menu responsive

--- a/index.html
+++ b/index.html
@@ -116,6 +116,67 @@
             </div>
           </div>
         </div>
+        <div class="about-inner">
+          <div class="icons-container">
+            <!-- HTML -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
+              alt="HTML"
+            />
+
+            <!-- CSS -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
+              alt="CSS"
+            />
+            <!-- JavaScript -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+              alt="JavaScript"
+            />
+            <!-- TypeScript -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg"
+              alt="TypeScript"
+            />
+
+            <!-- Docker -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg"
+              alt="Docker"
+            />
+
+            <!-- GitHub -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
+              alt="GitHub"
+            />
+
+            <!-- React -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"
+              alt="React"
+            />
+
+            <!-- Vite.js -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vitejs/vitejs-original.svg"
+              alt="Vite.js"
+            />
+
+            <!-- Tailwind CSS -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-original.svg"
+              alt="Tailwind CSS"
+            />
+
+            <!-- PostgreSQL -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg"
+              alt="PostgreSQL"
+            />
+          </div>
+        </div>
       </section>
 
       <!-- resume section structure -->
@@ -269,7 +330,6 @@
 
         <ul class="filter-box">
           <li class="filter-item active">All</li>
-          <li class="filter-item">JavaScript</li>
           <li class="filter-item">React</li>
           <li class="filter-item">HTML</li>
           <li class="filter-item">WordPress</li>
@@ -318,6 +378,12 @@
               <i class="fa-brands fa-react" style="color: #61dafb"></i>
               <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
               <i class="fa-brands fa-docker" style="color: #2496ed"></i>
+              <img
+                class="img-icon"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg"
+                alt="TypeScript"
+                width="5"
+              />
               <img
                 class="img-icon"
                 src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vitejs/vitejs-original.svg"
