--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
       <!-- nav for mobile -->
       <nav class="nav-mobile">
         <div class="navbar-brand">
-          <img src="./assets/images/logo.png" alt="" class="brand-img" />
+          <img
+            src="./assets/images/logo.png"
+            alt="picture Laetitia Piat"
+            class="brand-img"
+          />
           <h1 class="brand-name">Laetitia</h1>
         </div>
 
@@ -35,9 +39,13 @@
 
       <!-- sidebar structure -->
       <div class="side-bar">
-        <img src="./assets/images/logo.png" alt="" class="brand-img" />
+        <img
+          src="./assets/images/logo.png"
+          alt="picture Laetitia Piat"
+          class="brand-img"
+        />
         <br />
-        <img src="./assets/images/logoLP.png" alt="" class="brand-img" />
+        <img src="./assets/images/logoLP.png" alt="Logo LP" class="brand-img" />
         <!-- navbar -->
 
         <nav>
