update / ajout d'un projet

--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
 
               <div class="grid-item">
                 <h4 class="year">2024 - 2025</h4>
-                <h4 class="edu-name">Concepteur - Developpeur d'Application</h4>
+                <h4 class="edu-name">
+                  Concepteur - Developpeur d'Application (niveau Bac+3/4)
+                </h4>
                 <p class="company">Wild code school</p>
                 <p class="edu-desc">
                   Apprentissage JavaScript avancé, React et Vite.js, Postgresql,
@@ -214,10 +216,11 @@
 
               <div class="grid-item">
                 <h4 class="year">2023</h4>
-                <h4 class="edu-name">Developpeur web</h4>
+                <h4 class="edu-name">Developpeur web (niveau Bac+2)</h4>
                 <p class="company">Openclassrooms</p>
                 <p class="edu-desc">
-                  HTML, CSS, JavaScript, react, MongoDB, API rest, Git, Github
+                  HTML, CSS, JavaScript, React, Postgresql, API rest, Git,
+                  Github, Docker, Jest
                 </p>
                 <div class="divider"></div>
               </div>
@@ -229,7 +232,7 @@
               <h2>Experience</h2>
 
               <div class="grid-item">
-                <h4 class="year">Sept 2024 - aujourd'hui</h4>
+                <h4 class="year">Depuis Sept 2024</h4>
                 <h4 class="exp-name">Développeuse web</h4>
                 <p class="company">Klocel</p>
                 <p class="exp-desc">
@@ -273,19 +276,26 @@
               <h2>Coding Skills</h2>
 
               <div class="progress-detail">
-                <div class="progress-name">JavaScript</div>
-                <div class="progress-percent">80%</div>
+                <div class="progress-name">HTML/CSS</div>
+                <div class="progress-percent">90%</div>
               </div>
               <div class="progress-bar">
-                <div class="progress" style="width: 80%"></div>
+                <div class="progress" style="width: 90%"></div>
+              </div>
+              <div class="progress-detail">
+                <div class="progress-name">JavaScript</div>
+                <div class="progress-percent">70%</div>
+              </div>
+              <div class="progress-bar">
+                <div class="progress" style="width: 70%"></div>
               </div>
 
               <div class="progress-detail">
-                <div class="progress-name">MongoDB</div>
-                <div class="progress-percent">60%</div>
+                <div class="progress-name">Postgresql</div>
+                <div class="progress-percent">50%</div>
               </div>
               <div class="progress-bar">
-                <div class="progress" style="width: 60%"></div>
+                <div class="progress" style="width: 50%"></div>
               </div>
 
               <div class="progress-detail">
@@ -305,11 +315,11 @@
               </div>
 
               <div class="progress-detail">
-                <div class="progress-name">HTML/CSS</div>
-                <div class="progress-percent">90%</div>
+                <div class="progress-name">Docker</div>
+                <div class="progress-percent">60%</div>
               </div>
               <div class="progress-bar">
-                <div class="progress" style="width: 90%"></div>
+                <div class="progress" style="width: 60%"></div>
               </div>
 
               <div class="progress-detail">
@@ -345,34 +355,30 @@
 
         <div class="portfolio-items-group">
           <div class="portfolio-item active">
-            <img src="./assets/images/Kasa.png" alt="" class="item-img" />
-            <h4 class="item-name">Kasa</h4>
+            <img
+              src="./assets/images/Blog_Tamaris.png"
+              alt=""
+              class="item-img"
+            />
+            <h4 class="item-name">Blog Tamaris</h4>
             <div class="item-icon">
-              <i class="fa-brands fa-html5" style="color: #e34f26"></i>
               <i class="fa-brands fa-react" style="color: #61dafb"></i>
               <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+              <i class="fa-brands fa-docker" style="color: #2496ed"></i>
+              <img
+                class="img-icon"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg"
+                alt="TypeScript"
+                width="5"
+              />
+              <img
+                class="img-icon"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vitejs/vitejs-original.svg"
+                alt="Vite.js"
+                width="5"
+              />
             </div>
             <div class="item-category">React</div>
-          </div>
-
-          <div class="portfolio-item active">
-            <img src="./assets/images/OhMyFood.png" alt="" class="item-img" />
-            <h4 class="item-name">Oh My Food</h4>
-            <div class="item-icon">
-              <i class="fa-brands fa-html5" style="color: #e34f26"></i>
-              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
-            </div>
-            <div class="item-category">HTML</div>
-          </div>
-
-          <div class="portfolio-item active">
-            <img src="./assets/images/Galerie.png" alt="" class="item-img" />
-            <h4 class="item-name">Galerie d'art Céline Reguin</h4>
-            <div class="item-icon">
-              <i class="fa-brands fa-wordpress" style="color: #21759b"></i>
-              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
-            </div>
-            <div class="item-category">WordPress</div>
           </div>
 
           <div class="portfolio-item active">
@@ -400,6 +406,35 @@
               />
             </div>
             <div class="item-category">React</div>
+          </div>
+          <div class="portfolio-item active">
+            <img src="./assets/images/Kasa.png" alt="" class="item-img" />
+            <h4 class="item-name">Kasa</h4>
+            <div class="item-icon">
+              <i class="fa-brands fa-html5" style="color: #e34f26"></i>
+              <i class="fa-brands fa-react" style="color: #61dafb"></i>
+              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+            </div>
+            <div class="item-category">React</div>
+          </div>
+          <div class="portfolio-item active">
+            <img src="./assets/images/Galerie.png" alt="" class="item-img" />
+            <h4 class="item-name">Galerie d'art Céline Reguin</h4>
+            <div class="item-icon">
+              <i class="fa-brands fa-wordpress" style="color: #21759b"></i>
+              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+            </div>
+            <div class="item-category">WordPress</div>
+          </div>
+
+          <div class="portfolio-item active">
+            <img src="./assets/images/OhMyFood.png" alt="" class="item-img" />
+            <h4 class="item-name">Oh My Food</h4>
+            <div class="item-icon">
+              <i class="fa-brands fa-html5" style="color: #e34f26"></i>
+              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+            </div>
+            <div class="item-category">HTML</div>
           </div>
         </div>
       </section>
