--- a/index.html
+++ b/index.html
@@ -407,25 +407,29 @@
             </div>
             <div class="item-category">React</div>
           </div>
-          <div class="portfolio-item active">
-            <img src="./assets/images/Kasa.png" alt="" class="item-img" />
-            <h4 class="item-name">Kasa</h4>
-            <div class="item-icon">
-              <i class="fa-brands fa-html5" style="color: #e34f26"></i>
-              <i class="fa-brands fa-react" style="color: #61dafb"></i>
-              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+          <a href="https://laetitia-piat.github.io/Kasa/" target="_blank">
+            <div class="portfolio-item active">
+              <img src="./assets/images/Kasa.png" alt="" class="item-img" />
+              <h4 class="item-name">Kasa</h4>
+              <div class="item-icon">
+                <i class="fa-brands fa-html5" style="color: #e34f26"></i>
+                <i class="fa-brands fa-react" style="color: #61dafb"></i>
+                <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+              </div>
+              <div class="item-category">React</div>
             </div>
-            <div class="item-category">React</div>
-          </div>
-          <div class="portfolio-item active">
-            <img src="./assets/images/Galerie.png" alt="" class="item-img" />
-            <h4 class="item-name">Galerie d'art Céline Reguin</h4>
-            <div class="item-icon">
-              <i class="fa-brands fa-wordpress" style="color: #21759b"></i>
-              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+          </a>
+          <a href="https://celine-hemery-reguin.fr/" target="_blank">
+            <div class="portfolio-item active">
+              <img src="./assets/images/Galerie.png" alt="" class="item-img" />
+              <h4 class="item-name">Galerie d'art Céline Reguin</h4>
+              <div class="item-icon">
+                <i class="fa-brands fa-wordpress" style="color: #21759b"></i>
+                <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+              </div>
+              <div class="item-category">WordPress</div>
             </div>
-            <div class="item-category">WordPress</div>
-          </div>
+          </a>
 
           <div class="portfolio-item active">
             <img src="./assets/images/OhMyFood.png" alt="" class="item-img" />
