ajout de wildrent

--- a/index.html
+++ b/index.html
@@ -354,32 +354,61 @@
         </ul>
 
         <div class="portfolio-items-group">
-          <div class="portfolio-item active">
-            <img
-              src="./assets/images/Blog_Tamaris.png"
-              alt=""
-              class="item-img"
-            />
-            <h4 class="item-name">Blog Tamaris</h4>
-            <div class="item-icon">
-              <i class="fa-brands fa-react" style="color: #61dafb"></i>
-              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
-              <i class="fa-brands fa-docker" style="color: #2496ed"></i>
-              <img
-                class="img-icon"
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg"
-                alt="TypeScript"
-                width="5"
-              />
-              <img
-                class="img-icon"
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vitejs/vitejs-original.svg"
-                alt="Vite.js"
-                width="5"
-              />
+          <a
+            href="https://staging.092024-bleu-1.wns.wilders.dev/"
+            target="_blank"
+          >
+            <div class="portfolio-item active">
+              <img src="./assets/images/WildRent.png" alt="" class="item-img" />
+              <h4 class="item-name">Wild Rent</h4>
+              <div class="item-icon">
+                <i class="fa-brands fa-react" style="color: #61dafb"></i>
+                <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+                <i class="fa-brands fa-docker" style="color: #2496ed"></i>
+                <img
+                  class="img-icon"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg"
+                  alt="TypeScript"
+                  width="5"
+                />
+                <img
+                  class="img-icon"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vitejs/vitejs-original.svg"
+                  alt="Vite.js"
+                  width="5"
+                />
+              </div>
+              <div class="item-category">React</div>
             </div>
-            <div class="item-category">React</div>
-          </div>
+          </a>
+          <a href="https://staging.blog-tamaris.fr/" target="_blank">
+            <div class="portfolio-item active">
+              <img
+                src="./assets/images/Blog_Tamaris.png"
+                alt=""
+                class="item-img"
+              />
+              <h4 class="item-name">Blog Tamaris</h4>
+              <div class="item-icon">
+                <i class="fa-brands fa-react" style="color: #61dafb"></i>
+                <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+                <i class="fa-brands fa-docker" style="color: #2496ed"></i>
+                <img
+                  class="img-icon"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg"
+                  alt="TypeScript"
+                  width="5"
+                />
+                <img
+                  class="img-icon"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vitejs/vitejs-original.svg"
+                  alt="Vite.js"
+                  width="5"
+                />
+              </div>
+              <div class="item-category">React</div>
+            </div>
+          </a>
 
           <div class="portfolio-item active">
             <img
@@ -430,29 +459,19 @@
               <div class="item-category">WordPress</div>
             </div>
           </a>
-
-          <div class="portfolio-item active">
-            <img src="./assets/images/OhMyFood.png" alt="" class="item-img" />
-            <h4 class="item-name">Oh My Food</h4>
-            <div class="item-icon">
-              <i class="fa-brands fa-html5" style="color: #e34f26"></i>
-              <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+          <a href="https://ohmyfood-five.vercel.app/" target="_blank">
+            <div class="portfolio-item active">
+              <img src="./assets/images/OhMyFood.png" alt="" class="item-img" />
+              <h4 class="item-name">Oh My Food</h4>
+              <div class="item-icon">
+                <i class="fa-brands fa-html5" style="color: #e34f26"></i>
+                <i class="fa-brands fa-css3-alt" style="color: #1572b6"></i>
+              </div>
+              <div class="item-category">HTML</div>
             </div>
-            <div class="item-category">HTML</div>
-          </div>
+          </a>
         </div>
       </section>
-
-      <!-- <div class="portfolio-item active">
-        <img src="./assets/images/TheGoodCorner.png" alt="" class="item-img" />
-        <h4 class="item-name">Wild Rent</h4>
-        <div class="item-icon">
-          <i class="fa-brands fa-react " style="color: #61DAFB;"></i>
-          <img class="img-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vitejs/vitejs-original.svg" alt="Vite.js" width="5">
-          <i class="fa-brands fa-docker" style="color: #2496ED;"></i>
-          <img class="img-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg" alt="Tailwind CSS" width='5'>
-        </div>
-        <div class="item-category">React</div>-->
 
       <!-- contact section structure -->
       <section class="contact page">
