modif cv et texte pres

--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
                 <p>
                   Actuellement en apprentissage pour un titre de Concepteur
                   Developpeur d'applications de niveau Bac + 3/4 et très
-                  épanouie dans mon quotidien professionnel, je souhaite
-                  continuer dans ce parcours et intégrer une formation niveau
-                  Bac+5 en alternance également.
+                  épanouie dans mon quotidien professionnel, je souhaite trouver
+                  mon premier emploi en tant que développeuse web ou continuer
+                  dans ce parcours et intégrer une formation niveau Bac+5 en
+                  alternance également afin de monter en compétences et gagner
+                  en expérience.
                 </p>
               </div>
 
