--- a/index.html
+++ b/index.html
@@ -107,13 +107,14 @@
                 </p>
                 <br />
                 <p>
-                  Actuellement en apprentissage pour un titre de Concepteur
-                  Developpeur d'applications de niveau Bac + 3/4 et très
-                  épanouie dans mon quotidien professionnel, je souhaite trouver
-                  mon premier emploi en tant que développeuse fullstack ou
-                  continuer dans ce parcours et intégrer une formation niveau
-                  Bac+5 en alternance également afin de monter en compétences et
-                  gagner en expérience.
+                  Forte d'une première experience en tant que développeuse web
+                  chez Klocel, j'ai pu mettre en pratique mes compétences en
+                  développement et contribuer à l'amélioration du logiciel
+                  Cella. Je suis enthousiaste à l'idée de continuer à évoluer
+                  dans ce domaine et de relever de nouveaux défis. Lors de ces
+                  15 mois d'alternance, j'ai pu valider mon diplôme de
+                  Concepteur - Développeur d'Applications (niveau Bac+4) à la
+                  Wild Code School.
                 </p>
               </div>
 
@@ -205,7 +206,7 @@
               <div class="grid-item">
                 <h4 class="year">2024 - 2025</h4>
                 <h4 class="edu-name">
-                  Concepteur - Developpeur d'Application (niveau Bac+3/4)
+                  Concepteur - Developpeur d'Application (niveau Bac+4)
                 </h4>
                 <p class="company">Wild code school</p>
                 <p class="edu-desc">
@@ -337,7 +338,7 @@
 
         <a
           href="./assets/public/CV_Laetitia-Piat.pdf"
-          download="Mon_CV.pdf"
+          download="CV_Laetitia-Piat.pdf"
           class="btn-primary"
           >Download CV</a
         >
