--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
               <a
                 href="./assets/public/CV_Laetitia-Piat.pdf"
-                download="Mon_CV.pdf"
+                download="CV_Laetitia-Piat.pdf"
                 class="btn-primary"
                 >Download CV</a
               >
