--- a/index.html
+++ b/index.html
@@ -150,37 +150,37 @@
               src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg"
               alt="TypeScript"
             />
-
+            <!-- Python -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
+              alt="Python"
+            />
             <!-- Docker -->
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg"
               alt="Docker"
             />
-
-            <!-- GitHub -->
+            <!-- GitHub blanc (idéal fond sombre) -->
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
               alt="GitHub"
+              style="filter: invert(1)"
             />
-
             <!-- React -->
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"
               alt="React"
             />
-
             <!-- Vite.js -->
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vitejs/vitejs-original.svg"
               alt="Vite.js"
             />
-
             <!-- Tailwind CSS -->
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-original.svg"
               alt="Tailwind CSS"
             />
-
             <!-- PostgreSQL -->
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg"
