--- a/index.html
+++ b/index.html
@@ -96,25 +96,25 @@
               <h1 class="name">LAETITIA</h1>
               <div class="desc">
                 <p>
-                  En pleine reconversion et pleine d’espoir pour ce nouvel
-                  avenir professionnel…Touche à tout, j’ai beaucoup appris de
-                  mes différentes expériences dans le monde du travail. J’ai
-                  besoin d’être en perpétuel apprentissage pour m’épanouir. Le
-                  développement web nourrit ce besoin et évite la lassitude et
-                  l’ennui. Dynamique et passionnée, je m’intègre facilement et
-                  m’adapte rapidement dans tout nouvel univers et également à
-                  tout nouvel outils.
+                  Développeuse fullstack en reconversion, j’apporte de
+                  l’énergie, de la créativité et une vraie culture du résultat.
+                  Rapide à intégrer, efficace en équipe et toujours en quête de
+                  progression, je transforme les idées en solutions digitales
+                  performantes et centrées utilisateur. J’aime relever des défis
+                  techniques, optimiser l’existant et contribuer activement à
+                  des projets qui ont du sens.
                 </p>
                 <br />
                 <p>
-                  Forte d'une première experience en tant que développeuse web
-                  chez Klocel, j'ai pu mettre en pratique mes compétences en
-                  développement et contribuer à l'amélioration du logiciel
-                  Cella. Je suis enthousiaste à l'idée de continuer à évoluer
-                  dans ce domaine et de relever de nouveaux défis. Lors de ces
-                  15 mois d'alternance, j'ai pu valider mon diplôme de
-                  Concepteur - Développeur d'Applications (niveau Bac+4) à la
-                  Wild Code School.
+                  Mon expérience chez Klocel m’a permis de participer à
+                  l’évolution du logiciel Cella, en renforçant mes compétences
+                  en développement et ma rigueur professionnelle. Pendant 15
+                  mois d’alternance, j’ai validé mon diplôme de
+                  Concepteur-Développeur d’Applications (Bac+4) à la Wild Code
+                  School, tout en consolidant ma capacité à livrer des solutions
+                  fiables dans des environnements exigeants. Aujourd’hui, je
+                  suis prête à relever de nouveaux challenges et à m’investir
+                  pleinement dans une équipe ambitieuse et innovante.
                 </p>
               </div>
 
